--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="./style/img/pp.jpg" alt="alex-vidal">
+                    <img src="./style/img/pp.png" alt="alex-vidal">
                 </div>
 
             </div>
